Fixed icon alignment issue

--- a/app/web/styles/style.less
+++ b/app/web/styles/style.less
@@ -68,6 +68,7 @@ html, body {
 .navbar-nav > li > ul > li > a > .btn-default {
   background: #2196F3;
   color: #fff;
+  margin-right: 10px;
 }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
